[package]
name = "bopo_wiki"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
jieba-rs = "0.8.0"
lol_html = "2.6.0"
once_cell = "1.21.3"
phf = { version = "0.11", features = ["macros"] }
regex = "1.11.2"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.24.0"
tokio = { version = "1",  features = ["full"] }

[build-dependencies]
phf_codegen = "0.11"
